# codex_testing

./: README.md  pyproject.toml
gmail_mcp_service/: __init__.py  chatgpt_client.py  config.py  gmail_client.py  main.py  service.py
tests/: test_imports.py
